implementado a logica de importação e modificação do json da escola
